WIP: af3ad51 rest fertig

--- a/.gitignore
+++ b/.gitignore
@@ -58,7 +58,6 @@ snyk-*.log
 # IDEs and editors
 .idea
 *.iml
-/.env
 .project
 .classpath
 .c9/
@@ -72,3 +71,4 @@ snyk-*.log
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+.vscode/settings.json
