--- a/Dockerfile.distroless
+++ b/Dockerfile.distroless
@@ -131,11 +131,11 @@ FROM gcr.io/distroless/nodejs20-debian12:nonroot AS final
 # https://specs.opencontainers.org/image-spec/annotations
 # https://spdx.org/licenses
 # MAINTAINER ist deprecated https://docs.docker.com/engine/reference/builder/#maintainer-deprecated
-LABEL org.opencontainers.image.title="buch" \
-  org.opencontainers.image.description="Appserver buch mit distroless-Image" \
+LABEL org.opencontainers.image.title="film" \
+  org.opencontainers.image.description="Appserver film mit distroless-Image" \
   org.opencontainers.image.version="2024.04.0-distroless" \
   org.opencontainers.image.licenses="GPL-3.0-or-later" \
-  org.opencontainers.image.authors="Juergen.Zimmermann@h-ka.de"
+  org.opencontainers.image.authors="krro1024@h-ka.de"
 
 WORKDIR /opt/app
 
