--- a/Dockerfile.wolfi
+++ b/Dockerfile.wolfi
@@ -112,11 +112,11 @@ FROM cgr.dev/chainguard/node:latest AS final
 # https://specs.opencontainers.org/image-spec/annotations
 # https://spdx.org/licenses
 # MAINTAINER ist deprecated https://docs.docker.com/engine/reference/builder/#maintainer-deprecated
-LABEL org.opencontainers.image.title="buch" \
-  org.opencontainers.image.description="Appserver buch mit Basis-Image Wolfi" \
+LABEL org.opencontainers.image.title="film" \
+  org.opencontainers.image.description="Appserver film mit Basis-Image Wolfi" \
   org.opencontainers.image.version="2024.04.0-wolfi" \
   org.opencontainers.image.licenses="GPL-3.0-or-later" \
-  org.opencontainers.image.authors="Juergen.Zimmermann@h-ka.de"
+  org.opencontainers.image.authors="krro1024@h-ka.de"
 
 WORKDIR /opt/app
 
