--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ NODE_ENV = development
 CLIENT_SECRET = Tn7KURzuJm3qcIgNXlPHSp7k1tk8knC8
 
 # SonarQube Token von http://localhost:9000
-SONAR_TOKEN = "TBD"
+SONAR_TOKEN = sqa_b01809553fa468113448de2653c9b5e1e6fe1129
 
 # Snyk API Token von https://app.snyk.io/account
 SNYK_TOKEN = "TBD"
