--- a/.extras/compose/jenkins/compose.yml
+++ b/.extras/compose/jenkins/compose.yml
@@ -67,7 +67,7 @@ services:
           memory: 4G
 
   jenkins:
-    image: juergenzimmermann/jenkins:2024.04.0
+    image: romolus/jenkins:2024.04.0
     restart: always
     ports:
       - published: 7070
