--- a/.env
+++ b/.env
@@ -22,7 +22,7 @@ CLIENT_SECRET = Tn7KURzuJm3qcIgNXlPHSp7k1tk8knC8
 SONAR_TOKEN = sqa_b01809553fa468113448de2653c9b5e1e6fe1129
 
 # Snyk API Token von https://app.snyk.io/account
-SNYK_TOKEN = "TBD"
+SNYK_TOKEN = 9693805b-87ef-4bf0-97c7-8bffc462d1d3
 
 # OpenShift
 #NPM_CONFIG_PRODUCTION = true
